[tool.poetry]
name = "vika"
version = "0.1.0"
description = ""
authors = ["Vadym Sorokin <nicourrrn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.23.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
